chore: 🔨 added form header and font family setup

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <html>
+    <head>
+        <title>Home | Get Loan</title>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
+    </head>
 
-<head>
-    <title>React Starter Template</title>
-</head>
-
-<body>
-    <div id="root"></div>
-</body>
-
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
